--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "prettier": "^1.17.0"
     },
     "dependencies": {
-        "itty-router": "^2.1.9",
+        "itty-router": "^3.0.11",
+        "glob-parent": "^6.0.2",
         "realm-web": "^2.0.0",
         "serverless-cloudflare-workers": "^1.2.0"
     }
